<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Emseesquare.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.Emseesquare.PopupOverlay"
            app:title="Personal Information"
            app:titleTextColor="@color/titleColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingTop="12dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="122dp"
                android:layout_height="122dp"
                app:cardCornerRadius="999dp">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/man_photo_placeholder" />
            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/subtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subtitleEditText"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditText"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/instituteId">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instituteIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxStrokeColor="@color/green_500"
                app:endIconTint="@color/black35"
                app:hintTextColor="@color/green_500">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/roles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/role"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>